[package]
name = "torality"
version = "0.1.0"
edition = "2021"
description = "HTTP server built with Rust and Axum that serves .pmtiles for localities from around the world."
authors = ["Xavier Saliniere <bonjour@xaviers.sh>"]
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = [
    "net",
    "signal",
    "fs",
    "process",
    "sync",
    "rt-multi-thread",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
thiserror = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
headers = "0.4"
regex = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
