[package]
name = "localitysrv"
version = "0.1.0"
edition = "2021"
description = "HTTP server built with Rust and Axum that serves .pmtiles for localities from around the world."
authors = ["Xavier Saliniere <bonjour@xaviers.sh>"]
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = [
    "net",
    "signal",
    "fs",
    "process",
    "sync",
    "rt-multi-thread",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
thiserror = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
headers = "0.4"
regex = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Tor hidden service dependencies
arti-client = { version = "0.35", features = [
    "onion-service-service",
    "static",
] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
safelog = "0.6"
tor-cell = "0.35"
tor-hsservice = "0.35"
tor-proto = "0.35"
tracing-subscriber = "0.3.20"
