[package]
name = "localitysrv"
version = "0.2.0"
edition = "2021"
description = "Decentralized geographic data node using Codex network"
authors = ["Xavier Saliniere <bonjour@xaviers.sh>"]
license = "GPL-3.0-or-later"

[dependencies]
# Core dependencies (keep)
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }

# New Codex integration
codex-bindings = { version = "0.1.3" }
futures = "0.3"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
env_logger = "0.10"
